<resources>
    <string name="app_name">Students</string>
    <string name="add">Добавить</string>
    <string name="enter_new_student">Добавить нового студента</string>
    <string name="click_to_remove">Нажать для удаление</string>
    <string name="groupa">Группа</string>
    <string name="faculty">Факультет</string>
    <string name="student">Студент</string>
    <string name="newStudentName">Введите имя</string>
    <string name="newStudentSurname">Введите фамилию</string>
    <string name="newStudentPatronymic">Введите отчество</string>
    <string name="newStudentBirthDate">Введите дату рождения</string>
    <string name="wrongDateFormat">Неверный формат даты</string>
    <string name="edit">Изменить</string>
    <string name="delete">Удалить</string>
    <string name="editordelete">Изменить или удалить запись?</string>
    <string name="action_filter">Фильтр</string>
    <string name="cantDelete">Не могу удалить объект, так как имееются ссылки на объект</string>
    <string name="newFacultyName">Введите название факультета</string>
    <string name="fieldsMustBeFilled">Все поля должны быть заполнены</string>
</resources>