<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/newStudentName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/newStudentName"
        android:inputType="text"
        android:autofillHints="username" />
    <EditText
        android:id="@+id/newStudentSurname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/newStudentSurname"
        android:inputType="text"
        android:autofillHints="username" />
    <EditText
        android:id="@+id/newStudentPatronymic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/newStudentPatronymic"
        android:inputType="text"
        android:autofillHints="username" />

    <EditText
        android:id="@+id/newStudentBirthDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/newStudentBirthDate"
        android:inputType="date"
        android:autofillHints="date"/>
    <Spinner
        android:id="@+id/groupaSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/UpdateStudent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit"
        />

</LinearLayout>