<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/NewStudentName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/newStudentName"
        android:inputType="text"
        android:autofillHints="username" />
    <EditText
        android:id="@+id/NewStudentSurname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/newStudentPatronymic"
        android:inputType="text"
        android:autofillHints="username" />
    <EditText
        android:id="@+id/NewStudentPatronymic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/newStudentSurname"
        android:inputType="text"
        android:autofillHints="username" />

    <EditText
        android:id="@+id/NewStudentBirthDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/newStudentBirthDate"
        android:inputType="date"
        android:autofillHints="date"/>
    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>