<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/groupaButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/groupa" />
    <Button
        android:id="@+id/facultyButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/faculty" />
    <Button
        android:id="@+id/studentButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/student" />

</LinearLayout>